# bevy-fluid-simulation

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  build.rs  cliff.toml  flake.nix  rust-toolchain.toml
.github/workflows/: release.yml  rust_checks.yml
assets/shaders/: test_shader.wgsl
credits/: CREDITS.md
dioxus/: Cargo.toml  Dioxus.toml  package-lock.json  package.json  tailwind.config.js
dioxus/public/: tailwind.css
dioxus/src/: main.rs
docs/: index.html  tailwind.css
docs/assets/dioxus/: Bevy Fluid Simulation Blog.js  Bevy Fluid Simulation Blog_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-85a0a2f8acce2e86/: inline0.js
src/: components.rs  density_texture.rs  gpu.rs  main.rs  particle.rs  simulation.rs  world.rs
