[package]
name = "bevy-fluid-simulation"
version = "0.3.0"
edition = "2024"

[dependencies]
rand = "0.10.1"

[dependencies.bevy]
version = "0.18.1"
default-features = false
features = [
  "default_app",      # Core framework: assets, windowing, logging, state.
  "default_platform", # Platform backends: winit, multi_threaded, x11/wayland.
  "2d_bevy_render",   # 2D renderer: Mesh2d, ColorMaterial, core pipeline.
]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
strip = true
panic = "abort"
lto = true
codegen-units = 1

# High optimization for deps in debug builds.
[profile.dev.package."*"]
opt-level = 3
